// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CapabilityStrip snapshots > matches snapshots for 3-strip, single-strip, and empty fail-soft fixtures > empty-fail-soft 1`] = `
<DocumentFragment>
  <div
    style="width: 1920px; height: 1080px;"
  >
    <div
      style="display: grid; gap: 8px; width: 420px;"
    />
  </div>
</DocumentFragment>
`;

exports[`CapabilityStrip snapshots > matches snapshots for 3-strip, single-strip, and empty fail-soft fixtures > single-strip 1`] = `
<DocumentFragment>
  <div
    style="width: 1920px; height: 1080px;"
  >
    <div
      style="display: grid; gap: 8px; width: 420px;"
    >
      <div
        data-testid="capability-strip"
        style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
      >
        <div
          style="color: var(--sphere-force-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
        >
          IRON
        </div>
        <div
          style="display: flex; gap: 4px;"
        >
          <span
            aria-hidden="true"
            style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
          />
          <span
            aria-hidden="true"
            style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
          />
          <span
            aria-hidden="true"
            style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
          />
          <span
            aria-hidden="true"
            style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
          />
          <span
            aria-hidden="true"
            style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
          />
        </div>
        <div
          style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
        >
          one hard choice in view
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CapabilityStrip snapshots > matches snapshots for 3-strip, single-strip, and empty fail-soft fixtures > three-strip-default 1`] = `
<DocumentFragment>
  <div
    style="width: 1920px; height: 1080px;"
  >
    <div
      style="display: grid; gap: 8px; width: 420px;"
    >
      <div
        data-testid="capability-strip"
        style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
      >
        <div
          style="color: var(--sphere-force-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
        >
          IRON
        </div>
        <div
          style="display: flex; gap: 4px;"
        >
          <span
            aria-hidden="true"
            style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
          />
          <span
            aria-hidden="true"
            style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
          />
          <span
            aria-hidden="true"
            style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-force-bright);"
          />
          <span
            aria-hidden="true"
            style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
          />
          <span
            aria-hidden="true"
            style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
          />
        </div>
        <div
          style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
        >
          a steady arm in a tight queue
        </div>
      </div>
      <div
        data-testid="capability-strip"
        style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
      >
        <div
          style="color: var(--sphere-mind-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
        >
          EYE
        </div>
        <div
          style="display: flex; gap: 4px;"
        >
          <span
            aria-hidden="true"
            style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
          />
          <span
            aria-hidden="true"
            style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
          />
          <span
            aria-hidden="true"
            style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-mind-bright);"
          />
          <span
            aria-hidden="true"
            style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
          />
          <span
            aria-hidden="true"
            style="width: 8px; height: 8px; border-radius: 999px; background: color-mix(in srgb, var(--bg-raised) 75%, var(--text-tertiary) 25%);"
          />
        </div>
        <div
          style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
        >
          she misses little
        </div>
      </div>
      <div
        data-testid="capability-strip"
        style="display: grid; grid-template-columns: 80px auto minmax(0, 1fr); align-items: center; gap: 8px;"
      >
        <div
          style="color: var(--sphere-spirit-bright); font-size: var(--text-xs); letter-spacing: 0.12em; text-transform: uppercase;"
        >
          HEART
        </div>
        <div
          style="display: flex; gap: 4px;"
        >
          <span
            aria-hidden="true"
            style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
          />
          <span
            aria-hidden="true"
            style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
          />
          <span
            aria-hidden="true"
            style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
          />
          <span
            aria-hidden="true"
            style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
          />
          <span
            aria-hidden="true"
            style="width: 8px; height: 8px; border-radius: 999px; background: var(--sphere-spirit-bright);"
          />
        </div>
        <div
          style="color: var(--text-tertiary); font-size: var(--text-xs); font-style: italic; line-height: 1.4; min-width: 0px;"
        >
          her deepest thread
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
